tests/linear/linear-non-006/expected
Example Non-Linearly Wired Circuits
## Circuits
```
// LOG : Starting Linear NetList 
// LOG : Parsing Successful
../../shared/linear-non/DanglingArray.sv:7:0-0: Linearity Error:
bc := [FREE, USED, FREE]

```
## Verilator
```
%Warning-UNUSED: ../../shared/linear-non/DanglingArray.sv:3: Bits of signal are not used: 'bc'[2,0]
                                                           : ... In instance DanglingArray
              , input  logic[2:0] bc
                                  ^~
                 ... Use "/* verilator lint_off UNUSED */" and lint_on around source to disable this message.
%Error: Exiting due to 1 warning(s)
```
